Merge pull request #3 from micronaut-projects/sync-files-0.0.x
[projectgen] Update common files for branch 0.0.x